<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_book_test"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_book_test" />
        <item
            android:id="@+id/nav_my_bookings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_my_bookings" />
        <item
            android:id="@+id/nav_my_reports"
            android:icon="@drawable/ic_reports"
            android:title="@string/menu_my_reports" />
        <item
            android:id="@+id/nav_pending_payments"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/pending_payments_title" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_profile" />
    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>